# APTWatcher

./: .gitignore  CLAUDE.md  LICENSE  README.md  RUNBOOK.md  SUBMISSION-CHECKLIST.md  install.sh  mkdocs.yml  pyproject.toml
.mypy_cache/3.11/: cache.0.db-journal
demo/: ANNOUNCE.md  SCRIPT.md  SHOOTING-SCRIPT.md
deploy/claude-code/: README.md
deploy/hybrid/: README.md
deploy/mcp-server/: README.md
docs/: ACCURACY.md  ARCHITECTURE.md  DATASET.md  DEVPOST.md  POLICY.md  README.md  SCOPE.md  TRY-IT-OUT.md
docs/architecture/: README.md  audit-logging.md  deployment-modes.md  evidence-integrity.md  mode-b-llm-ownership.md  self-correction.md  shared-brain.md  tier-model.md
docs/datasets/: README.md  public-sources.md  synthetic.md
docs/demo/: WALKTHROUGH.md
docs/design/: accuracy-harness.md  analysis-output-pipeline.md  audit-log-format.md  deployment-modes.md  evidence-integrity.md  offline-to-online-handoff.md  openclaw-alternative.md  self-correction-gates.md  subdomain-agents.md  tier-gating.md  tier0-sift-lifecycle.md  tier1-intel-lookup-pattern.md
docs/getting-started/: README.md  installation.md  mode-a-direct-agent.md  mode-b-mcp-server.md  mode-c-hybrid.md  try-it-out.md
docs/integrations/: README.md  apt-watch.md  cnc-disruptor.md  glpi.md  ms-threat-analytics.md
docs/reference/: README.md  audit-report.md  knowledge-index.md  mcp-tool-schemas.md  mcp-tools.md  mitre-coverage.md  sift-tools.md
docs/scenarios/: README.md  S01-single-windows-compromise.md  S02-multi-host-lateral-movement.md  S03-ransomware-pre-detonation.md
docs/use-cases/: README.md  linux-host-triage.md  memory-only.md  mobile-host-triage.md  network-artifact.md  osx-host-triage.md  timeline-only.md  windows-host-triage.md
knowledge/: README.md
knowledge/cloud/: aws-cloudtrail-iam-escalation.md
knowledge/linux/: auth-log-triage.md  ssh-key-lateral.md  suid-abuse.md  systemd-cron.md  webshell-execution.md
knowledge/macos/: launchagent-persistence.md  launchd-plist.md
knowledge/memory/: kernel-module.md  process-hollowing.md  reflective-dll-injection.md
knowledge/mobile/: imessage-artifacts.md  ios-sysdiagnose.md
knowledge/network/: beacon-jitter-dns-tunneling.md  beaconing-dns-tunneling.md  c2-http-patterns.md  lateral-smb-rpc.md
knowledge/procedures/: c2-beacon-identification.md  credential-theft-response.md  lateral-movement-containment.md  memory-triage-live-response.md  persistence-removal-windows.md  ransomware-initial-triage.md  timeline-building-workflow.md
prompts/: planner.md  self-correction-checklist.md  self_corrector.md  system.md  verifier.md
scenarios/: README.md  S04-offline-to-online-handoff.md  S05-find-evil-e01.md
scripts/: clean_room_check.py  prepare-vm.sh  run-gates.sh  vm-test.ps1  vm-test.sh
tests/: conftest.py  test_accuracy_runner.py  test_accuracy_scoring.py  test_agent_loop.py  test_agent_loop_analysis_emit.py  test_agent_loop_llm_e2e.py  test_apt_watch_provider.py  test_audit.py  test_audit_render.py  test_blocklist_providers.py  test_bulk_extractor.py  test_bundle_roundtrip.py  test_bundle_schema.py  test_bundle_signer.py  test_chainsaw.py  test_cli_analyze.py  test_cli_publish.py  test_cli_run.py  test_config.py  test_dshield_provider.py  test_export_community.py  test_export_iocs_txt.py  test_export_stix.py  test_feeds.py  test_hayabusa.py  test_integrations_glpi.py  test_intel_aggregator.py  test_intel_http_provider.py  test_intel_stub.py  test_keyed_providers.py  test_knowledge.py  test_llm.py  test_llm_anthropic.py  test_llm_planner.py  test_llm_self_corrector.py  test_llm_verifier.py  test_plaso.py  test_preflight.py  test_profiles.py  test_publish_glpi_attachment.py  (+18 more)
(+122 files in other folders)
