[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "aptwatcher"
version = "0.1.0a0"
description = "Autonomous defensive IR agent for the SIFT workstation hackathon"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "APTWatcher" }]
keywords = ["dfir", "incident-response", "sift", "mcp", "threat-intel"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = [
    # Typed data model + config
    "pydantic>=2.6",
    "pyyaml>=6.0",
    # MCP server surface
    "mcp>=1.2",
    # HTTP for Tier 1 adapters
    "httpx>=0.27",
    # CLI surface for Mode A
    "typer>=0.12",
    "rich>=13.7",
    # Bilingual .docx campaign reports (core.analysis.report_docx)
    "python-docx>=1.1",
    # Ed25519 IncidentBundle signing (core.bundle.signer)
    "cryptography>=42.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-PyYAML>=6.0",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "pymdown-extensions>=10.8",
]

[project.scripts]
aptwatcher = "agent_extension.cli:app"
aptwatcher-preflight = "agent_extension.cli:preflight_entry"
aptwatcher-mcp = "mcp_server.server:main"

[project.urls]
Homepage = "https://github.com/aptwatcher/APTWatcher"
Documentation = "https://aptwatcher.github.io/APTWatcher/"
Issues = "https://github.com/aptwatcher/APTWatcher/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/core", "src/mcp_server", "src/agent_extension", "src/integrations"]

[tool.hatch.build.targets.wheel.sources]
"src/core" = "core"
"src/mcp_server" = "mcp_server"
"src/agent_extension" = "agent_extension"
"src/integrations" = "integrations"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers --strict-config"
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "slow: tests that take noticeable wall-clock time",
    "integration: tests that require external services",
    "accuracy: scenario accuracy harness runs",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle + pyflakes
    "I",              # isort
    "N",              # pep8-naming
    "UP",             # pyupgrade
    "B",              # bugbear
    "A",              # builtins
    "C4",             # comprehensions
    "RET",            # return
    "SIM",            # simplify
    "TID",            # tidy-imports
    "PTH",            # pathlib
    "PLE", "PLW",     # pylint errors/warnings
]
ignore = [
    "E501",   # line-too-long — handled by formatter
]

[tool.ruff.lint.per-file-ignores]
# Tests: asserts are the point; nested `with` blocks and blind
# `pytest.raises(Exception)` are deliberate in mock-heavy suites.
"tests/*" = ["S101", "SIM117", "B017"]
# Re-export hub: model definitions precede the grouped imports by design.
"src/core/analysis/__init__.py" = ["E402"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
packages = ["core", "mcp_server", "agent_extension", "integrations"]
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["mcp.*"]
ignore_missing_imports = true
